[tool.poetry]
name = "fossil"
version = "0.1.0"
description = "A mastodon reader client that uses embeddings to present a consolidated view of my mastodon timeline"
authors = ["Tim Kellogg <timothy.kellogg@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
streamlit = "^1.29.0"
scikit-learn = "^1.3.2"
html2text = "^2020.1.16"
tiktoken = "^0.5.2"
python-dotenv = "^1.0.0"
fastapi = "^0.105.0"
jinja2 = "^3.1.2"
uvicorn = "^0.25.0"
python-multipart = "^0.0.6"
llm = "^0.12"


[tool.poetry.group.dev.dependencies]
watchdog = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
