[tool.poetry]
name = "fossil-mastodon"
version = "0.2.0-dev"
description = "A mastodon reader client that uses embeddings to present a consolidated view of my mastodon timeline"
authors = ["Tim Kellogg <timothy.kellogg@gmail.com>"]
license = "MIT"
readme = "README.md"
include = ["**/*.css", "**/*.js", "**/*.html"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
streamlit = "^1.29.0"
scikit-learn = "^1.3.2"
html2text = "^2020.1.16"
tiktoken = "^0.5.2"
python-dotenv = "^1.0.0"
fastapi = "^0.105.0"
jinja2 = "^3.1.2"
uvicorn = "^0.25.0"
python-multipart = "^0.0.6"
llm = "^0.12"

# You can use this same format for installing your own plugins from a different project
[tool.poetry.plugins."fossil_mastodon.algorithms"]
topic_cluster = "fossil_mastodon.plugin_impl.topic_cluster:TopicCluster"


[tool.poetry.group.dev.dependencies]
watchdog = "^3.0.0"
watchfiles = "^0.21.0"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
